--- a/Specification/1x15.md
+++ b/Specification/1x15.md
@@ -1,114 +1,115 @@
-# 🧠 Блок 1.16 — Поддержка большого объема памяти
+# 🕓 Блок 1.15 — Поддержка системной версии (AS OF)
 
 ---
 
 ## 🆔 Идентификатор блока
 
-| Категория | Значение                                |
-| --------- | --------------------------------------- |
-| 📦 Пакет  | 1 — Архитектура и Хранилище             |
-| 🔢 Блок   | 1.16 — Поддержка большого объема памяти |
+| Категория | Значение                                  |
+| --------- | ----------------------------------------- |
+| 📦 Пакет  | 1 — Архитектура и Хранилище               |
+| 🔢 Блок   | 1.15 — Поддержка системной версии (AS OF) |
 
 ---
 
 ## 🎯 Назначение
 
-Обеспечивает эффективную работу In-Memory СУБД на системах с **массивным объёмом оперативной памяти** (1+ ТБ, до 5+ ПБ), включая NUMA-архитектуры, RDIMM/3DS DIMM, и PMEM (Persistent Memory).
+Блок реализует поддержку **"версий таблиц во времени"**, основанную на системных timestamp’ах. Это позволяет выполнять:
 
-Позволяет:
-
-* Использовать всё доступное ОЗУ,
-* Минимизировать latencies при доступе,
-* Эффективно размещать данные и фоновые структуры по NUMA-нодам,
-* Поддерживать тонкую настройку лимитов на память и мониторинг.
+* **"AS OF" запросы** к данным на определённый момент времени,
+* автоматический контроль истории изменений,
+* аудит изменений и восстановление состояния.
 
 ---
 
 ## ⚙️ Функциональность
 
-| Подсистема                  | Реализация / особенности                                             |
-| --------------------------- | -------------------------------------------------------------------- |
-| NUMA-aware allocation       | Размещение страниц и буферов по нодам в зависимости от топологии     |
-| Huge Pages / 1G Pages       | Поддержка Transparent / Explicit Huge Pages (настраивается в config) |
-| Memory manager              | Аренный аллокатор с контролем регионов и фрагментации                |
-| Per-node memory quota       | Лимитирование потребления памяти на NUMA-ноду                        |
-| Memory statistics           | Глубокая аналитика по регионам, аллокаторам, страницам               |
-| Load balancing (allocation) | Учет свободной памяти, пропускной способности канала (DDR5/PMEM)     |
+| Подсистема                    | Реализация / особенности                                              |
+| ----------------------------- | --------------------------------------------------------------------- |
+| System-Versioned Tables       | Встроенные `VALID_FROM` / `VALID_TO` колонки, поддержка ANSI SQL:2011 |
+| AS OF Queries                 | Запросы вида `SELECT ... FROM table FOR SYSTEM_TIME AS OF TIMESTAMP`  |
+| Temporal Indexing             | Индексы по времени валидности                                         |
+| Insert/Update with history    | Автоматическое сохранение историй при изменениях                      |
+| Garbage Collection по истории | Настройка срока хранения версий                                       |
 
 ---
 
 ## 🔧 Основные функции на C
 
-| Имя функции                 | Прототип                                                   | Назначение                     |
-| --------------------------- | ---------------------------------------------------------- | ------------------------------ |
-| `memory_init()`             | `void memory_init(void)`                                   | Инициализация менеджера памяти |
-| `memory_alloc_numa()`       | `void *memory_alloc_numa(size_t size, int node_id)`        | Выделение памяти на NUMA-ноду  |
-| `memory_get_available_mb()` | `uint64_t memory_get_available_mb(void)`                   | Общий доступный объём памяти   |
-| `memory_report_stats()`     | `void memory_report_stats(FILE *out)`                      | Вывод статистики               |
-| `memory_enforce_limits()`   | `bool memory_enforce_limits(session_t *sess, size_t size)` | Проверка лимитов при аллокации |
+| Имя функции                      | Прототип                                                         | Назначение                                |
+| -------------------------------- | ---------------------------------------------------------------- | ----------------------------------------- |
+| `temporal_init()`                | `void temporal_init(void)`                                       | Инициализация подсистемы временных версий |
+| `temporal_insert()`              | `bool temporal_insert(table_t *, const row_t *, timestamp_t ts)` | Вставка версии строки                     |
+| `temporal_scan_as_of()`          | `iterator_t *temporal_scan_as_of(table_t *, timestamp_t ts)`     | Получение данных на момент времени        |
+| `temporal_prune_old_versions()`  | `void temporal_prune_old_versions(timestamp_t threshold)`        | Очистка устаревших версий                 |
+| `temporal_is_enabled(table_t *)` | `bool temporal_is_enabled(const table_t *tbl)`                   | Проверка на системную версионность        |
 
 ---
 
 ## 📊 Метрики
 
-| Метрика                        | Источник        | Цель                      |
-| ------------------------------ | --------------- | ------------------------- |
-| `mem_total_mb`                 | Memory Manager  | > 1 000 000 (1 ТБ)        |
-| `mem_used_per_node_mb`         | NUMA Tracker    | равномерное распределение |
-| `mem_fragmentation_ratio`      | Allocator Stats | < 1.5                     |
-| `hugepage_utilization_percent` | Kernel / perf   | > 90%                     |
-| `allocation_latency_ns`        | Memtrace        | < 500 нс                  |
+| Метрика                    | Источник         | Цель                              |
+| -------------------------- | ---------------- | --------------------------------- |
+| `as_of_query_latency_ms`   | Query Planner    | < 2 мс                            |
+| `temporal_versions_count`  | Catalog Stats    | Не более 1000/строку (с очисткой) |
+| `temporal_data_bytes`      | Storage Analyzer | ≤ 20% от основного хранилища      |
+| `gc_old_versions_per_hour` | GC Engine        | ≥ 50k/ч                           |
+| `temporal_enabled_tables`  | Metadata Manager | ≥ 80% бизнес-таблиц               |
 
 ---
 
 ## 📂 Связанные модули кода
 
 ```
-src/memory.c
-src/memory_numa.c
-src/memory_debug.c
-include/memory.h
+src/temporal.c
+src/temporal_index.c
+src/gc_temporal.c
+include/temporal.h
 ```
 
 ---
 
 ## 🧠 Особенности реализации
 
-* Поддержка **libnuma**, `mbind()`, `numa_alloc_onnode()` (или собственные mmap-контроллеры)
-* Настройка страниц: `MADV_HUGEPAGE`, `MAP_HUGETLB`, `MAP_POPULATE`
-* Контроль OOM через аллокатор, не допуская аварийных остановок
-* Поддержка Memory Pressure Trigger — backpressure в WAL / ingest
+* MVCC используется в качестве основы для версий
+* Компрессия версий с RLE / dictionary encoding
+* Сжатие inactive-версий cold-данных
+* Все изменения логируются через WAL и snapshot’ы
+* Используется `SYSTEM_TIME` стандарт SQL
 
 ---
 
 ## 🧪 Тестирование
 
-| Вид теста   | Методика / покрытие                                      | Где расположен                   |
-| ----------- | -------------------------------------------------------- | -------------------------------- |
-| Unit        | Проверка аллокаций, освобождения, HugePages              | `tests/memory/test_alloc.c`      |
-| NUMA        | Выделение/заполнение с учётом ноды, проверка латентности | `tests/memory/test_numa.c`       |
-| Stress      | Выделение и удаление 1 млрд объектов по разным нодам     | `tests/stress/hugepages_alloc.c` |
-| Performance | Бенчмарк latency alloc vs NUMA node distance             | `bench/memory/bench_latency.c`   |
+| Вид теста   | Методика / покрытие                            | Где расположен                 |
+| ----------- | ---------------------------------------------- | ------------------------------ |
+| Unit        | Версионность insert/update/delete              | `tests/temporal/test_insert.c` |
+| Snapshot    | Проверка rollback и восстановления на любой ts | `tests/temporal/test_as_of.c`  |
+| GC          | Очистка старых версий при достижении порога    | `tests/gc/test_temporal_gc.c`  |
+| Integration | Сквозной аудит изменений через SQL             | `tests/integration/temporal.c` |
 
 ---
 
-## 📐 UML — Управление памятью
+## 📐 UML — AS OF и Versioning
 
 ```plantuml
 @startuml
-class MemoryManager {
-  +memory_init()
-  +memory_alloc_numa()
-  +memory_report_stats()
+class Table {
+  +rows : Row[]
+  +temporal_enabled : bool
 }
 
-class NUMA_Node {
-  +id
-  +total_mb
-  +used_mb
+class Row {
+  +valid_from : timestamp_t
+  +valid_to : timestamp_t
 }
 
-MemoryManager --> NUMA_Node : alloc_on_node()
+class TemporalManager {
+  +scan_as_of(ts)
+  +prune_old()
+}
+
+Table --> TemporalManager
+Row --> Table
 @enduml
 ```
 
@@ -116,26 +117,28 @@ MemoryManager --> NUMA_Node : alloc_on_node()
 
 ## ✅ Соответствие SAP HANA+
 
-| Критерий                             | Оценка | Комментарий                     |
-| ------------------------------------ | ------ | ------------------------------- |
-| NUMA-aware размещение                | 100    | Поддержка mbind, distance-aware |
-| HugePages                            | 90     | Поддержка 2М и 1Г страниц       |
-| Тонкий контроль лимитов и статистика | 95     | session-level + per-node        |
+| Критерий                      | Оценка | Комментарий                              |
+| ----------------------------- | ------ | ---------------------------------------- |
+| Поддержка AS OF (SYSTEM TIME) | 100    | Полная совместимость с SQL:2011+         |
+| История изменений             | 95     | На уровне строк, с оптимизацией хранения |
+| Очистка устаревших версий     | 90     | На основе политики TTL и last-access     |
 
 ---
 
 ## 📎 Пример кода
 
 ```c
-memory_init();
-void *ptr = memory_alloc_numa(4 * 1024 * 1024, 1); // 4MB на NUMA-ноду 1
-memory_report_stats(stdout);
+timestamp_t ts = now() - HOURS(4);
+iterator_t *it = temporal_scan_as_of(tbl, ts);
+while (row_t *r = iter_next(it)) {
+    process_row(r);
+}
 ```
 
 ---
 
 ## 📌 Связь с бизнес-функциями
 
-* Позволяет эффективно использовать всю доступную оперативную память серверов
-* Устраняет деградации производительности при больших объёмах in-memory
-* Обеспечивает предсказуемую латентность под высокими нагрузками
+* Позволяет реализовать **аудит** и исторический **отчёт по данным**
+* Ускоряет **анализ изменений** между версиями
+* Поддерживает регуляторные требования (GDPR, SOC2, ISO27001)
